tests/errors/surf_parse_01.experr
error: expected ':' after Function parameters